fix svg icons on ios

--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -49,6 +49,7 @@ plainlist(inline = false)
 round()
   width button-size-small
   height button-size-small
+  padding 5px
   border-radius (button-size-small / 2)
   overflow hidden
   border 2px solid transparent
@@ -240,6 +241,10 @@ $keyframe-name = slide-up
     transform scale(0.95)
     fill color-background-secondary-strong
 
+  &:hover
+    .icon-shape
+      fill tint(color-background-secondary-strong, 5%)
+
   &:focus
     .icon-shape
       stroke color-focus
@@ -248,19 +253,19 @@ $keyframe-name = slide-up
 .svg-icon
   display inline-block
   margin 0
+  padding 0
   width 100%
   height 100%
+  max-width 100%
+  max-height 100%
   outline none
-  &:hover
-    opacity 0.8
-  &:active
-    opacity 1
 
 .output-panel
   padding space(2) space(1.5) 0
   clear both
 
 .output-button-add
+  padding 5px
   outline none
   border 5px solid color-background-primary
   vertical-align top
